<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="Sua foto"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:src="@drawable/ic_account_box"
            android:id="@+id/UserPhoto"
            />
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_hello" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fulano da sila" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewCondominioName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Condomínio de casas" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewNumeroCasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Casa 04" />


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableTop="@drawable/ic_library_books"
        android:background="@color/colorTextHint"
        android:text="@string/text_dados"
        android:textSize="18sp"
        android:padding="20dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonMoradores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableTop="@drawable/ic_people"
        android:background="@color/colorTextHint"
        android:text="@string/text_morador"
        android:textSize="18sp"
        android:padding="20dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonVeiculos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableTop="@drawable/ic_directions_car"
        android:background="@color/colorTextHint"
        android:text="@string/text_veiculo"
        android:textSize="18sp"
        android:padding="20dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonAnimais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableTop="@drawable/ic_pets"
        android:background="@color/colorTextHint"
        android:text="@string/text_animal"
        android:textSize="18sp"
        android:padding="20dp"
        />

</LinearLayout>